# Project-Newcomb-forked-with-added-test-infra

./: .gitignore  20260322_litreview_plan.md  README.md  pyproject.toml  sample_test_coverage.md
.github/: pull_request_template.md
.github/workflows/: test.yml
experiments/alaro/: IBComparison.ipynb  example.ipynb
experiments/alaro/docs/: 20260313_ibplan.md  20260318_CopyReverseHeads.md  20260318_NewcombsProblem.md  20260318_NewcombsProblem2.md  20260320_ibplan.md  20260321_simpleIUCB.md  20260322_litreview_plan.md
experiments/fllor/: Makefile  README.md  plot.gp
experiments/lorxus/: NimRL.ipynb
experiments/maryal01/: newcomb.ipynb
ibrl/agents/: __init__.py  experimental3.py  infrabayesian.py  iucb.py
ibrl/environments/: Coin_tossing_game_envs  asymmetric_damascus.py  bandit.py  base.py  base_newcomb_like.py  damascus.py  newcomb.py  switching.py
ibrl/infrabayesian/: __init__.py  a_measure.py  belief_a_measure.py  belief_infradistribution.py  beliefs.py  helpers.py  infradistribution.py
ibrl/iucb/: __init__.py  algebra.py  confidence_set.py
ibrl/simulators/: simulator.py
ibrl/utils/: construction.py  game_solving.py
tests/: conftest.py  test_agents.py  test_algebra.py  test_construction.py  test_environments.py  test_game_solving.py  test_infrabayesian.py  test_infrabayesian_beliefs.py  test_interface.py  test_iucb_agent.py  test_simple_iucb_agent.py  test_simulator.py  test_smoke.py  test_ucb_agent.py
