[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibrl"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26,<2.0",
    "scipy>=1.11",
    "gymnasium>=0.29",
    "pyyaml>=6.0",
    "jupyter",
    "matplotlib",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-timeout>=2.1",
    "pytest-cov>=4.0",
]

[tool.setuptools]
packages = ["ibrl"]

[tool.setuptools.package-data]
ibrl = ["py.typed"]
